--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,6 +7,7 @@
 <div class="text-center">
     <h1 class="display-4">Hello World from .Net 6</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <img src="http://ocdn.eu/pulscms-transforms/1/4ZLk9kpTURBXy8yZjBjYjc4OWZhY2M1MzI5MmU0NDAwZWIwMTIzMGEzNi5qcGeTlQPNASsczQXmzQNSkwXNBLDNAqSTCaYzN2ExMWIG3gABoTAB/bohdan-smolen-znalazl-ciala-syna-i-zony-ktorzy-popelnili-samobojstwo.jpg" />
     <hr />
     <div>Host operating system: @Model.OSVersion</div>
 </div>
